--- a/CSS.css
+++ b/CSS.css
@@ -1,4 +1,10 @@
-/*
+/* ==UserStyle==
+@name         雫酱的哔哩哔哩美化
+@namespace      github.com/NaCl-Jerry/Sizuku-s-BiLiBiLi-CSS-style
+@version        1.0.0
+@description    哔哩哔哩美化
+@author        Sizuku
+==/UserStyle== 
  *该项目基于2位大佬的CSS样式修改来分别是
  *
  *【退坑】Amazing bilibili by Hakadao https://userstyles.org/styles/168843/amazing-bilibili
